<resources>
    <string name="app_name">Caldi</string>
    <string name="email_hint">Email</string>
    <string name="password_hint_sign_up">Password (min. 6 chars)</string>
    <string name="password_hint_login">Password</string>
    <string name="sign_in_text">Log in</string>
    <string name="sign_in_with_google_text">Log in with Google</string>
    <string name="sign_in_with_facebook_text">Log in with Facebook</string>
    <string name="login_error_text">Something went wrong :(</string>
    <string name="sign_up_error_text">Something went wrong :(</string>
    <string name="event_list_fetching_error">Something went wrong :(</string>
    <string name="create_account_text">Create account</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="facebook_app_id">392822507809930</string>
    <string name="fb_login_protocol_scheme">fb392822507809930</string>
    <string name="events_item_text">Your events</string>
    <string name="sign_out_item_text">Log out</string>
    <string name="drawer_opened">Drawer opened</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="add_event_prompt">Enter event code received from the organizer</string>
    <string name="add_event_word_to_be_colored">code</string>
    <string name="event_code_hint">What\'s your event code?</string>
    <string name="add_new_event_button">Add new event</string>
    <string name="add_event_error">Something went wrong. Is your event code correct?</string>
    <string name="new_event_added_text">New event added</string>
    <string name="your_event_profile_text">Your event profile</string>
    <string name="answer_here_hint">Answer here</string>
    <string name="name_edit_text_hint">Your name for this event</string>
    <string name="create_profile_prompt">Create your profile for this event</string>
    <string name="create_profile_words_to_be_colored">this event</string>
    <string name="upload_photo_text">Upload photo (optional)</string>
    <string name="save_profile_text">Save profile</string>
    <string name="error_event_profile_text">Something went wrong :(</string>
    <string name="profile_updated">Profile updated</string>
    <string name="loading_photo">Loading a picture…</string>
    <string name="meet_people_text">Meet people</string>
    <string name="no_people_to_meet_text">Currently there is no attendees to meet. \nCheck again later.</string>
    <string name="fill_event_profile_first_prompt">First fill in your event profile</string>
    <string name="chat_menu_text">Chat</string>
    <string name="chat_message_hint">Aa</string>
    <string name="organizer_messages_text">Organizer messages</string>
    <string name="user_link_hint">Share one link e. g. Instagram (optional)</string>
    <string name="failed_to_open_link">Failed to open this link</string>
    <string name="no_chats_info">You don\'t have any chats yet.</string>
    <string name="no_events_yet">You are not attending any events yet.</string>
    <string name="change_people_view_text">Change Meet People view</string>
    <string name="attendee_name_filter_text">Attendee name</string>
    <string name="posted_link_filter_text">Posted link (optional)</string>
    <string name="organizer_channel_title">Organizer messages</string>
    <string name="organizer_message_notification_title">Organizer message</string>
    <string name="organizer_message_notification_body">%1$s sent a new message</string>
    <string name="new_connection_notification_title">%1$s</string>
    <string name="new_connection_notification_body">%1$s is now a new connection</string>
    <string name="new_connection_channel_title">New connections</string>
    <string name="chat_message_notification_title">%1$s</string>
    <string name="chat_message_notification_body">%1$s sent a new message</string>
    <string name="chat_message_channel_title">Chat messages</string>
    <string name="logout_connection_prompt">Turn on your internet to logout</string>
    <string name="general_settings_item_text">General settings</string>
    <string name="general_notifications_preference_category">Notifications for all events</string>
    <string name="event_notifications_preference_category">Notifications for this event</string>
    <string name="event_settings_item_text">Event settings</string>
    <string name="no_internet_error">You\'re not connected to the internet</string>
    <string name="generic_error">Something went wrong :(</string>
    <string name="wrong_password_error">This password is wrong</string>
    <string name="user_not_found_error">This user doesn\'t exist</string>
    <string name="invalid_email_error">This email is invalid</string>
    <string name="already_used_email_error">This email is already used</string>
    <string name="onboarding_home_screen">On this screen you can add new events and adjust general app settings.</string>
    <string name="onboarding_organizer_screen">Here you\'ll receive messages from event host. Use top left button to navigate. Click event name banner for more info.</string>
    <string name="onboarding_meet_people_screen">On this screen you can browse through event attendees. Click green tick button if you like somebody. You can chat only with people who also liked you. Click top right button to filter attendees.</string>
    <string name="onboarding_filter_people_screen">Here you can filter attendees by info they put in their profiles.</string>
    <string name="onboarding_chat_list_screen">This screen contains all your connections from this event.</string>
    <string name="onboarding_chat_screen">Chat with somebody here! You can click on attendee name banner for more info.</string>
    <string name="onboarding_event_profile">Answer short questions from the organizer to meet new people.</string>
    <string name="onboarding_event_settings">These settings will have effect only on THIS event.</string>
    <string name="onboarding_general_settings">These settings will have effect on ALL events.</string>
</resources>
