<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include layout="@layout/toolbar" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/contentViewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:fillViewport="true"
            tools:ignore="UnknownIdInLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/createProfilePromptTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_profile_prompt"
                    android:textSize="16dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/profilePictureImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/profile_picture_shape" />

                    <TextView
                        android:id="@+id/loadingPhotoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/loading_photo"
                        android:textSize="16dp"
                        android:visibility="gone" />

                </RelativeLayout>

                <com.caldi.customviews.CaldiButton
                    android:id="@+id/uploadPhotoButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/green_button_background"
                    android:text="@string/upload_photo_text" />

                <com.caldi.customviews.CaldiEditText
                    android:id="@+id/eventUserNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/name_edit_text_hint"
                    android:inputType="text"
                    android:maxLength="35"
                    android:maxLines="1" />

                <com.caldi.customviews.CaldiEditText
                    android:id="@+id/userLinkEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/user_link_hint"
                    android:inputType="text"
                    android:maxLength="35"
                    android:maxLines="1" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/questionsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" />

                <com.caldi.customviews.CaldiButton
                    android:id="@+id/saveProfileButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/green_button_background"
                    android:text="@string/save_profile_text" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:itemBackground="@drawable/navigation_item_background"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/menu_navigation_event" />

</android.support.v4.widget.DrawerLayout>