<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/contentViewGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/toolbar" />

            <TextView
                android:id="@+id/eventCodePromptTextView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/add_event_prompt"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@id/eventCodeEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.caldi.customviews.CaldiEditText
                android:id="@+id/eventCodeEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/event_code_hint"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.caldi.customviews.CaldiButton
                android:id="@+id/addEventButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/green_button_background"
                android:text="@string/add_new_event_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventCodeEditText" />

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:visibility="gone" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:itemBackground="@drawable/navigation_item_background"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/menu_navigation_items" />

</android.support.v4.widget.DrawerLayout>